--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
   <script src="webstart.js"></script>
 </head>
 <body>
+  <div style="width:30%">
   <textarea id="user-code"></textarea>
   <button id="run">Run!</button>
-  <pre id="output" disabled=true></pre>
+  </div>
+  <pre style="width:30%" id="generated-code"></pre>
+  <pre style="width:30%" id="output"></pre>
 </body>
 </html>
